--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -12,4 +12,61 @@ body{
     margin:0;
     padding:0;
     line-height: 1.2;
+    font-size: $text-xl;
+    font-family: 'Inter', sans-serif;
+    max-width: 1440px;
+    margin:0 auto;
 }
+
+a, a:visited, a:hover{
+    text-decoration: none;
+}
+
+
+
+//flexbox styles
+
+.flex{
+    display: flex;
+    &-jc-sb{
+        justify-content: space-between;
+    }
+
+    &-ai-c{
+        align-items: center;
+    }
+}
+
+//buttons
+
+.btn-primary-xl{
+    padding:0.75rem 1.75em;
+    border-radius: 8px;
+    cursor: pointer;
+    background-color: $primary-400;
+    font-size: $text-lg;
+    color: $white;
+    border: 1px solid $primary-400;
+    font-weight: 500;
+    letter-spacing: 0px;
+    line-height: 24px;
+
+    &:hover{
+        background-color: $primary-300;
+        border: 1px solid $primary-300;
+        transition: color 200ms ease-in-out;
+    }
+}
+
+// Visibility
+.hide-for-mobile {
+    @include breakpoint-down(medium) {
+      display: none;
+    }
+  }
+  
+  .hide-for-desktop {
+    @include breakpoint-up(large) {
+      display: none;
+    }
+  }
