--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -3,10 +3,14 @@
 $white : #fff;
 $balck : #000;
 
+$primary-25 : #F1EDFE;
+$primary-50 : #D6C8FB;
 $primary-300 : #835AF3;
 $primary-400 : #7548F2;
 $primary-500 : #6941DA;
 
+$gray-25 : #FCFCFD;
+$gray-50 : #F9FAFB;
 $gray-500 : #667085;
 $gray-900 : #101828;
 
