update footer section completed

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -110,6 +110,13 @@ h5{
     &-ai-c{
         align-items: center;
     }
+
+    &-fd-c{
+        flex-direction: column;
+    }
+    &-fd-r{
+        flex-direction: row;
+    }
 }
 
 //text align center
