--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -11,6 +11,7 @@ $primary-500 : #6941DA;
 
 $gray-25 : #FCFCFD;
 $gray-50 : #F9FAFB;
+$gray-400 : #98A2B3;
 $gray-500 : #667085;
 $gray-900 : #101828;
 
