--- a/app/scss/_newsletter.scss
+++ b/app/scss/_newsletter.scss
@@ -10,6 +10,10 @@
         border-radius: 1rem;
         padding: 40px 24px;
 
+        @include breakpoint-up(large){
+            //border-radius: 1rem 1rem 0px 0px;
+        }
+
         > div{
 
             @include breakpoint-up(large){
