--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -1,6 +1,7 @@
 html{
     font-size: 100%;
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 
 *, *::after, *::before {
@@ -74,6 +75,11 @@ h5{
         font-size: 1.875rem;
         line-height:  2.375rem;
     }
+}
+
+h6{
+    font-size: 20px;
+    line-height: 30px;
 }
 
 
@@ -179,11 +185,28 @@ h5{
     padding: 10px 14px;
     width: 100%;
     border-radius: 8px;
-    border:none;
+    border:1px solid $gray-300;
     height: 44px;
     font-size: 16px;
     line-break: 24px;
     color: $gray-900;
+}
+
+textarea{
+    border-radius: 8px;
+    font-size: 16px;
+    line-break: 24px;
+    color: $gray-900;
+    padding: 10px 14px;
+    border:1px solid $gray-300;
+    width: 100%;
+}
+
+label{
+    color: $gray-700;
+    font-size: 14px;
+    line-height: 20px;
+    margin-bottom: 6px;
 }
 
 // Visibility
