--- a/app/scss/_variables.scss
+++ b/app/scss/_variables.scss
@@ -11,9 +11,13 @@ $primary-500 : #6941DA;
 
 $gray-25 : #FCFCFD;
 $gray-50 : #F9FAFB;
+$gray-300 : #D0D5DD;
 $gray-400 : #98A2B3;
 $gray-500 : #667085;
+$gray-700 : #344054;
 $gray-900 : #101828;
+
+$secondary-500 : #DA4033;
 
 
 //fonts sizes
