--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -202,6 +202,24 @@ textarea{
     width: 100%;
 }
 
+.search_input{
+    margin: 0px auto;
+    position: relative;
+    margin-top: 24px;
+
+    input{
+        padding-left: 42px;
+    }
+
+    img{
+        position: absolute;
+        left: 12px;
+        top: 12px;
+    }
+}
+
+
+
 label{
     color: $gray-700;
     font-size: 14px;
